--- a/CBNU_Kiosk_main/bugger/templates/bugger/young_order.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/young_order.html
@@ -599,12 +599,40 @@
         //세트메뉴
         let setMenuBtn = document.querySelectorAll('[id^=setMenuBtn]');
         const setMenuBtnClickHandle = (e) => {
+         e.preventDefault();
+
+
         var count = document.querySelector("#headingOne > button > h4 > sup").innerText;
         count *= 1;
         document.querySelector("#headingOne > button > h4 > sup").innerText = count + 1;
 
         // 주문 금액 수정
         var id = e.target.id.split("--")[1]; // 추가된 부분: 버튼의 ID에서 id 추출
+        // 선택한 음료 카테고리가 cart-list에 없는 경우
+        if (document.getElementById('cart--' + id) == null){
+            let cartListArea = document.getElementById('cart-list');
+            cartListArea.innerHTML += '<div class="row" id="cart--'+ id +'"> \
+                                        <div class="col-7" id="cartElement">'+ id +'</div> \
+                                        <div class="col-1" id="deduct--'+ id +'"><i class="bi bi-dash-circle" style="pointer-events: none;"></i></div> \
+                                        <div class="col-2" id="'+ id +'--count">1</div> \
+                                        <div class="col-1" id="add--'+ id +'"><i class="bi bi-plus-circle" style="pointer-events: none;"></i></div> \
+                                    </div>'
+            // Event Listener 추가
+            let addElementButton = document.querySelectorAll('[id^=add--]');
+            for(let i=0;i<addElementButton.length;i++){
+                addElementButton[i].addEventListener('click', addElementButtonClickHandle);
+            }
+            let deductElementButton = document.querySelectorAll('[id^=deduct--]');
+            for(let i=0;i<deductElementButton.length;i++){
+                deductElementButton[i].addEventListener('click', deductElementButtonClickHandle);
+            }
+
+        }else{
+            // 선택한 음료 카테고리가 cart-list에 있는 경우, 개수 수정
+            var prev_count = document.getElementById(id + '--count').innerText;
+            prev_count *= 1;
+            document.getElementById(id + '--count').innerText = prev_count + 1;
+        }
         var price = document.getElementById(id + '--price').innerText.split(' ')[0];
         price = (parseFloat(price) + 1300) * 1; // 수정된 부분: 가격을 숫자로 파싱한 후 계산
 
@@ -612,7 +640,7 @@
         totalPrice = parseFloat(totalPrice) * 1; // 수정된 부분: 총 금액을 숫자로 파싱
 
         document.getElementById('total-money').innerHTML = '<h5>' + (totalPrice + price) + '</h5>';
-};
+}
 
 for (let i = 0; i < setMenuBtn.length; i++) {
     setMenuBtn[i].addEventListener('click', setMenuBtnClickHandle);
