--- a/CBNU_Kiosk_main/bugger/templates/bugger/young_order.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/young_order.html
@@ -267,36 +267,37 @@
                                                 장바구니 담기
                                             </button>
                                             <div id="btnWrap">
-  <button typ="button" id="popupBtn">세트메뉴</button>
-</div>
 
-<div id="modalWrap">
-    <div id="modalBody">
+                <button typ="button" id="popupBtn">세트메뉴</button>
+                                            </div>
 
-      <span id="closeBtn">&times;</span>
-      <p>세트메뉴 변경.</p>
-         <div class="row justify-content-center" id="menu_content--bugger" style="display: auto;">
-            {% for menu in bugger_all %}
+                <div id="modalWrap">
+                <div id="modalBody">
+
+                <span id="closeBtn">&times;</span>
+                <p>세트메뉴 변경.</p>
+                <div class="row justify-content-center" id="menu_content--bugger" style="display: auto;">
+                {% for menu in bugger_all %}
                 <div class="col-md-4 col mb-5">
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal{{menu.id}}">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="{{menu.image|fix_route|default:'https://dummyimage.com/450x300/dee2e6/6c757d.jpg'}}" alt="..." />
-                        <!-- Product details-->
-                        <div class="card-body p-4">
-                            <div class="text-center">
+                            <img class="card-img-top" src="{{menu.image|fix_route|default:'https://dummyimage.com/450x300/dee2e6/6c757d.jpg'}}" alt="..." />
+                            <!-- Product details-->
+                                <div class="card-body p-4">
+                                <div class="text-center">
                                 <!-- Product name-->
                                 <h4 class="fw-bolder">{{menu.title}}</h4>
                                 <!-- Product price-->
                                 <h4 class="fw-normal" id="{{menu.title}}--price">{{menu.price}} 원</h4>
                                 <!-- Product Calorie-->
                                 <h5 class="fw-light text-muted">{{menu.calorie}} Kcal</h5>
-                                  <button class="btn btn-primary btn-lg" data-bs-dismiss="modal" id="addToCart--{{menu.title}}">
+                                  <button class="btn btn-primary btn-lg" data-bs-dismiss="modal" id="setMenuBtn--{{menu.title}}">
                                                 <i class="fas fa-xmark fa-fw"></i>
                                                 {{menu.title}}로 변경하기
-                                            </button>
+                                  </button>
 
                             </div>
                         </div>
@@ -305,7 +306,7 @@
                 </div>
              {% endfor%}
 
-    </div>
+                                        </div>
 </div>
 
                                         </div>
@@ -682,50 +683,7 @@
             document.getElementById('total-money').innerHTML = '<h5>' + (totalPrice - price) + '</h5>';
         }
 
-        //세트메뉴
-        let setMenuBtn = document.querySelectorAll('[id^=setMenuBtn]');
-        const setMenuBtnClickHandle = (e) => {
-         e.preventDefault();
 
-
-        var count = document.querySelector("#headingOne > button > h4 > sup").innerText;
-        count *= 1;
-        document.querySelector("#headingOne > button > h4 > sup").innerText = count + 1;
-
-        // 주문 금액 수정
-        var id = e.target.id.split("--")[1]; // 추가된 부분: 버튼의 ID에서 id 추출
-        // 선택한 음료 카테고리가 cart-list에 없는 경우
-        if (document.getElementById('cart--' + id) == null){
-            let cartListArea = document.getElementById('cart-list');
-            cartListArea.innerHTML += '<div class="row" id="cart--'+ id +'"> \
-                                        <div class="col-7" id="cartElement">'+ id +'</div> \
-                                        <div class="col-1" id="deduct--'+ id +'"><i class="bi bi-dash-circle" style="pointer-events: none;"></i></div> \
-                                        <div class="col-2" id="'+ id +'--count">1</div> \
-                                        <div class="col-1" id="add--'+ id +'"><i class="bi bi-plus-circle" style="pointer-events: none;"></i></div> \
-                                    </div>'
-            // Event Listener 추가
-            let addElementButton = document.querySelectorAll('[id^=add--]');
-            for(let i=0;i<addElementButton.length;i++){
-                addElementButton[i].addEventListener('click', addElementButtonClickHandle);
-            }
-            let deductElementButton = document.querySelectorAll('[id^=deduct--]');
-            for(let i=0;i<deductElementButton.length;i++){
-                deductElementButton[i].addEventListener('click', deductElementButtonClickHandle);
-            }
-
-        }else{
-            // 선택한 음료 카테고리가 cart-list에 있는 경우, 개수 수정
-            var prev_count = document.getElementById(id + '--count').innerText;
-            prev_count *= 1;
-            document.getElementById(id + '--count').innerText = prev_count + 1;
-        }
-        var price = document.getElementById(id + '--price').innerText.split(' ')[0];
-        price = (parseFloat(price) + 1300) * 1; // 수정된 부분: 가격을 숫자로 파싱한 후 계산
-
-        var totalPrice = document.getElementById('total-money').innerText;
-        totalPrice = parseFloat(totalPrice) * 1; // 수정된 부분: 총 금액을 숫자로 파싱
-
-        document.getElementById('total-money').innerHTML = '<h5>' + (totalPrice + price) + '</h5>';
 }
 
 for (let i = 0; i < setMenuBtn.length; i++) {
@@ -790,7 +748,7 @@ for (let i = 0; i < setMenuBtn.length; i++) {
 </script>
 <!--세트메뉴 변경 모달 창 js-->
 <script>
-    const btn = document.getElementById('popupBtn');
+const btn = document.getElementById('popupBtn');
 const modal = document.getElementById('modalWrap');
 const closeBtn = document.getElementById('closeBtn');
 
@@ -806,6 +764,8 @@ window.onclick = function(event) {
     modal.style.display = "none";
   }
 }
+
+
 </script>
 
 
